k8s/daemonset/nginx-hello-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-hello
spec:
  selector:
    matchLabels:
      app: nginx-hello
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
        - name: nginx-hello
          image: nginxdemos/hello:0.3
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
