k8s/daemonset/nginx-hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 80
